src/relocations/llvmreloc/rtdyld.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub const _VCRT_COMPILER_PREPROCESSOR: u32 = 1;
pub const _SAL_VERSION: u32 = 20;
pub const __SAL_H_VERSION: u32 = 180000000;
pub const _USE_DECLSPECS_FOR_SAL: u32 = 0;
pub const _USE_ATTRIBUTES_FOR_SAL: u32 = 0;
pub const _CRT_PACKING: u32 = 8;
pub const _HAS_EXCEPTIONS: u32 = 1;
pub const _STL_LANG: u32 = 0;
pub const _HAS_CXX17: u32 = 0;
pub const _HAS_CXX20: u32 = 0;
pub const _HAS_CXX23: u32 = 0;
pub const _HAS_CXX26: u32 = 0;
pub const _HAS_NODISCARD: u32 = 0;
pub const WCHAR_MIN: u32 = 0;
pub const WCHAR_MAX: u32 = 65535;
pub const WINT_MIN: u32 = 0;
pub const WINT_MAX: u32 = 65535;
pub type va_list = *mut ::std::os::raw::c_char;
unsafe extern "C" {
  pub fn __va_start(arg1: *mut *mut ::std::os::raw::c_char, ...);
}
pub type __vcrt_bool = bool;
pub type wchar_t = ::std::os::raw::c_ushort;
unsafe extern "C" {
  pub fn __security_init_cookie();
}
unsafe extern "C" {
  pub fn __security_check_cookie(_StackCookie: usize);
}
unsafe extern "C" {
  pub fn __report_gsfailure(_StackCookie: usize) -> !;
}
unsafe extern "C" {
  pub static mut __security_cookie: usize;
}
pub type int_least8_t = ::std::os::raw::c_schar;
pub type int_least16_t = ::std::os::raw::c_short;
pub type int_least32_t = ::std::os::raw::c_int;
pub type int_least64_t = ::std::os::raw::c_longlong;
pub type uint_least8_t = ::std::os::raw::c_uchar;
pub type uint_least16_t = ::std::os::raw::c_ushort;
pub type uint_least32_t = ::std::os::raw::c_uint;
pub type uint_least64_t = ::std::os::raw::c_ulonglong;
pub type int_fast8_t = ::std::os::raw::c_schar;
pub type int_fast16_t = ::std::os::raw::c_int;
pub type int_fast32_t = ::std::os::raw::c_int;
pub type int_fast64_t = ::std::os::raw::c_longlong;
pub type uint_fast8_t = ::std::os::raw::c_uchar;
pub type uint_fast16_t = ::std::os::raw::c_uint;
pub type uint_fast32_t = ::std::os::raw::c_uint;
pub type uint_fast64_t = ::std::os::raw::c_ulonglong;
pub type intmax_t = ::std::os::raw::c_longlong;
pub type uintmax_t = ::std::os::raw::c_ulonglong;
pub type max_align_t = f64;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AllocBlockSlice {
  pub rwview: usize,
  pub rxview: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of AllocBlockSlice"][::std::mem::size_of::<AllocBlockSlice>() - 16usize];
  ["Alignment of AllocBlockSlice"][::std::mem::align_of::<AllocBlockSlice>() - 8usize];
  ["Offset of field: AllocBlockSlice::rwview"]
    [::std::mem::offset_of!(AllocBlockSlice, rwview) - 0usize];
  ["Offset of field: AllocBlockSlice::rxview"]
    [::std::mem::offset_of!(AllocBlockSlice, rxview) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct AllocRequest {
  pub size: usize,
  pub alignment: ::std::os::raw::c_uint,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of AllocRequest"][::std::mem::size_of::<AllocRequest>() - 16usize];
  ["Alignment of AllocRequest"][::std::mem::align_of::<AllocRequest>() - 8usize];
  ["Offset of field: AllocRequest::size"][::std::mem::offset_of!(AllocRequest, size) - 0usize];
  ["Offset of field: AllocRequest::alignment"]
    [::std::mem::offset_of!(AllocRequest, alignment) - 8usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct SectionName {
  pub ptr: *const ::std::os::raw::c_char,
  pub size: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of SectionName"][::std::mem::size_of::<SectionName>() - 16usize];
  ["Alignment of SectionName"][::std::mem::align_of::<SectionName>() - 8usize];
  ["Offset of field: SectionName::ptr"][::std::mem::offset_of!(SectionName, ptr) - 0usize];
  ["Offset of field: SectionName::size"][::std::mem::offset_of!(SectionName, size) - 8usize];
};
pub type getfn_ptr = ::std::option::Option<
  unsafe extern "C" fn(
    arg1: *mut ::std::os::raw::c_void,
    arg2: *const ::std::os::raw::c_char,
    arg3: usize,
  ) -> *mut ::std::os::raw::c_void,
>;
pub type allocate_t = ::std::option::Option<
  unsafe extern "C" fn(
    arg1: *mut ::std::os::raw::c_void,
    arg2: AllocRequest,
    arg3: SectionName,
  ) -> AllocBlockSlice,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct RustRTInterface {
  pub state: *mut ::std::os::raw::c_void,
  pub getfnPtr: getfn_ptr,
  pub allocate: allocate_t,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
  ["Size of RustRTInterface"][::std::mem::size_of::<RustRTInterface>() - 24usize];
  ["Alignment of RustRTInterface"][::std::mem::align_of::<RustRTInterface>() - 8usize];
  ["Offset of field: RustRTInterface::state"]
    [::std::mem::offset_of!(RustRTInterface, state) - 0usize];
  ["Offset of field: RustRTInterface::getfnPtr"]
    [::std::mem::offset_of!(RustRTInterface, getfnPtr) - 8usize];
  ["Offset of field: RustRTInterface::allocate"]
    [::std::mem::offset_of!(RustRTInterface, allocate) - 16usize];
};
unsafe extern "C" {
  pub fn link_rtdyld(
    rt: *mut RustRTInterface,
    data: *const ::std::os::raw::c_char,
    size: usize,
  ) -> ::std::os::raw::c_int;
}
